<resources>
    <string name="app_name">VK Mutual Groups</string>
    <string name="login_failed">Login failed!</string>
    <string name="log_out">Log out</string>
    <string name="friend_name" translatable="false">"%1$s %2$s"</string>
    <string name="mutual">%d mut.</string>
    <string name="refresh">Refresh</string>
    <string name="loading_failed">Loading failed!\nYou can try again.</string>
    <string name="friends">%d frn.</string>
    <string name="no_groups">No groups.</string>
    <string name="no_mutual_groups">No mutual groups.</string>
    <string name="no_friends">No friends.</string>
    <string name="no_friends_in_group">No friends in group.</string>
    <string name="to_the_begin">To the begin</string>
    <string name="my_groups">My Groups</string>
    <string name="loading_completed">Loading completed!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="send_message">Send message</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="cant_send_message">You can\'t write to this user.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="no">no</string>
    <string name="message_sent">Message sent successfully.</string>
    <string name="message_sending_error">Message was NOT sent!</string>
    <string name="delete_friend">Delete friend</string>
    <string name="leave_group">Leave group</string>
    <string name="friend_deleting_error">Friend was NOT deleted!</string>
    <string name="group_leaving_error">You did NOT leave group!</string>
    <string name="friend_deleted_successfully">Friend deleted successfully.</string>
    <string name="group_left_successfully">You left group successfully.</string>
    <string name="groups_of_friend_empty_list">User\'s groups list\n is empty or user\n hide groups list.</string>
    <string name="view_groups">View groups</string>
    <string name="groups_list_loaded">Groups list loaded!</string>
    <string name="join_group">Join group</string>
    <string name="group_joining_error">You did NOT join group!</string>
    <string name="group_join_successfully">You join group successfully.</string>
    <string name="group_request_sent_successfully">Request to join group sent successfully.</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="friend_added_successfully">User added to friends successfully.</string>
    <string name="friend_request_sent_successfully">Friend request sent successfully.</string>
    <string name="friend_adding_error">User was NOT added to friends!</string>
    <string name="search">Search</string>
    <string name="search_friends">Search friend</string>
    <string name="search_groups">Search groups</string>
    <string name="message_format_in_groups" translatable="false">\n* %1$s (http://vk.com/%2$s)</string>
    <string name="cache_images">Cache images on device</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="open_link_with">Open link with</string>
    <string name="settings">Settings</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_images_cache_on_device">Clear images cache on device</string>
    <string name="images_caching">Images caching</string>
    <string name="image_cache_cleared">Image cache cleared.</string>
    <string name="exit">Exit</string>
    <string name="my_friends">My Friends</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nothing_found">Nothing found.</string>
    <string name="loading_is_on">Loading is on!</string>
    <string name="data_was_not_loaded_else">Data was not loaded else!</string>

    <string name="clear_errors">clear errors</string>
    <string name="show_errors">Show errors</string>
    <string name="send_to_developer">send to developer</string>
</resources>
