<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/images_caching">

        <SwitchPreference android:key="is_cache_images_on_device"
            android:title="@string/images_caching"
            android:summary="@string/cache_images"
            android:defaultValue="true"/>

        <com.qwert2603.vkmutualgroups.fragments.ClearImageCacheDialogPreference
            android:key="clear_images_cache_on_device"
            android:dialogIcon="@android:drawable/ic_dialog_alert"
            android:title="@string/clear_cache"
            android:summary="@string/clear_images_cache_on_device"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/ok"
            android:dialogTitle="@string/clear_cache"/>

    </PreferenceCategory>

</PreferenceScreen>